# ditele

./: .dockerignore  Dockerfile  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  test_api.py  test_comprehensive.py  test_database_verification.py  test_simple.py  test_telemetry.json
alembic/: env.py
alembic/versions/: 17957a95994a_initial_migration.py
database/: connection.py  models.py
telemetry/: __init__.py  interpreter.py  router.py  schemas.py  services.py  transformer.py
telemetry/devices/: __init__.py  ac.py  charging.py  common.py  gearbox.py  instrument.py  location.py  pm25.py  speed.py  statistic.py
utils/: validators.py
